기능 테스트 완료, api 명세서 작성